 258.	[bug]		Fixed printing of lwres_addr_t.address field.

 257.	[bug]		The server detached the last zone manager reference
			too early, while it could still be in use by queries.
			This manifested itself as assertion failures during the 
			shutdown process for busy name servers (RT #133).

 256.	[func]		isc_ratelimiter_t now has attach/detach semantics, and
			isc_ratelimiter_shutdown guarantees that the rate
			limiter is detached from its task.

 255.	[func]		New function dns_zonemgr_attach().

 254.	[bug]		suppress "query denied" messages on additional data
			lookups.

	--- 9.0.0b4 released ---

 253.	[func]		resolv.conf parser now recognises ';' and '#' as
			comments (anywhere in line, not just as the beginning).

 252.	[bug]		resolv.conf parser mishandled masks on sortlists.
			It slso aborted when an unrecognised keyword was seen,
			now it silently ignores the entire line.

 251.	[bug]		lwresd caught an assertion failure on startup.

 250.	[bug]		fixed handling of size+unit when value would be too
			large for internal representation.

 249.	[cleanup]	max-cache-size config option now takes a size-spec
			like 'datasize', except 'default' is not allowed.

 248.	[bug]		global lame-ttl option was not being printed when
			config structures were written out.

 247.	[cleanup]	Rename cache-size config option to max-cache-size.

 246.	[func]		Rename global option cachesize to cache-size and
			add corresponding option to view statement.

 245.	[bug]		If an uncompressed name will take more than 255
			bytes and the buffer is sufficiently long,
			dns_name_fromwire should return DNS_R_FORMERR,
			not ISC_R_NOSPACE.  This bug caused cause the
			server to catch an assertion failure when it
			received a query for a name longer than 255
			bytes.

 244.	[bug]		empty named.conf file and empty options statement are
			now parsed properly.

 243.	[func]		new cachesize option for named.conf

 242.	[cleanup]	fixed incorrect warning about auth-nxdomain usage.
