@@ -16,6 +16,8 @@
 
 options {
 	version "my version string";
+	random-device "/dev/random";
+	random-seed-file "/random/seed/file";
 	directory "/tmp";
 
 	port 666;
